--- a/aur-repo/mockitt-cn/lilac.yaml
+++ b/aur-repo/mockitt-cn/lilac.yaml
@@ -8,6 +8,6 @@ post_build_script: |
 update_on:
   - source: regex
     url: "https://modao.cc/feature/downloads.html"
-    regex: 'Mockitt-linux-x64-(\d+.\d+.\d+).deb'
-  - source: manual
-    manual: 1
+    regex: 'Mockitt-linux-x64-([\d.]+).deb'
+# - source: manual
+#   manual: 1
