--- a/aur-repo/serialtool/PKGBUILD
+++ b/aur-repo/serialtool/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=serialtool
 pkgver=1.5.7
 pkgrel=1
 pkgdesc="A practical Serial-Port/TCP/UDP debugging tool."
-arch=('any')
+arch=($CARCH)
 url="https://github.com/HoGC/SerialTool"
 license=('GPL-3.0-or-later')
 provides=(${pkgname})
