--- a/aur-repo/serialtool-git/PKGBUILD
+++ b/aur-repo/serialtool-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=v1.5.5.r0.ge7c9f72
 pkgrel=2
 pkgdesc="A practical Serial-Port/TCP/UDP debugging tool."
 arch=($CARCH)
-url="https://github.com/HoGC/SerialTool"
+url="https://github.com/skiars/SerialTool"
 license=('GPL-3.0-or-later')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
