--- a/aur-repo/aos-tools/lilac.yaml
+++ b/aur-repo/aos-tools/lilac.yaml
@@ -5,8 +5,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-# repo_depends:
-#   -
+repo_depends:
+  - python-glob2
 update_on:
   - source: pypi
     pypi: aos-tools
