--- a/aur-repo/python-glob2/PKGBUILD
+++ b/aur-repo/python-glob2/PKGBUILD
@@ -16,9 +16,9 @@ makedepends=(
   python-setuptools)
 checkdepends=('python-pytest')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz"
-  $pkgname-warning.patch::https://github.com/miracle2k/python-glob2/pull/27.patch)
+  $pkgname-warning.patch)
 sha512sums=('6707c33782373cd71b1794ef3a143f6c0ceb5733bec944d16596eb4662df4c788328078b621bdda6096da95ec2f267256fca620dd7691eb02bf0ce940dd4150e'
-            '9d9fae98fbac70f4b639be9732512e6d4465553947371457feaacb73a7152f25171e98ce427494a4ac571d01da1fa1b3ddae4e15841c178d16b96918108cdde7')
+  '9d9fae98fbac70f4b639be9732512e6d4465553947371457feaacb73a7152f25171e98ce427494a4ac571d01da1fa1b3ddae4e15841c178d16b96918108cdde7')
 
 prepare() {
   cd ${_name}-${pkgver}
