--- a/aur-repo/serialtool-git/PKGBUILD
+++ b/aur-repo/serialtool-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 _pkgname=SerialTool
 pkgname=serialtool-git
-pkgver=v1.5.5.r0.ge7c9f72
-pkgrel=2
+pkgver=1.4.0alpha.r28.g6f14442
+pkgrel=1
 pkgdesc="A practical Serial-Port/TCP/UDP debugging tool."
 arch=($CARCH)
 url="https://github.com/skiars/SerialTool"
