--- a/aur-repo/rmqtt-git/PKGBUILD
+++ b/aur-repo/rmqtt-git/PKGBUILD
@@ -11,7 +11,8 @@ license=('MIT')
 provides=(${pkgname%-git} librmqtt_macros.so)
 conflicts=(${pkgname%-git} librmqtt_macros.so)
 replaces=()
-depends=('cargo')
+depends=('cargo'
+    protobuf-c)
 makedepends=('git' 'rust')
 backup=()
 options=('!strip' '!lto')
