--- a/aur-repo/bmcweb-git/PKGBUILD
+++ b/aur-repo/bmcweb-git/PKGBUILD
@@ -54,6 +54,7 @@ pkgver() {
 
 prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
+    meson subprojects download --sourcedir="${srcdir}/${pkgname}"
 }
 
 build() {
