--- a/aur-repo/cangaroo/PKGBUILD
+++ b/aur-repo/cangaroo/PKGBUILD
@@ -33,7 +33,6 @@ pkgver() {
 
 prepare() {
 	git -C "${srcdir}/${pkgname}" clean -dfx
-	sed -i '29i#include <linux/sockios.h>' "$srcdir/$pkgname"/src/driver/SocketCanDriver/SocketCanInterface.cpp
 }
 
 build() {
@@ -47,6 +46,7 @@ build() {
 
 package() {
 	cd "$srcdir/$pkgname"
+	# 	make install DESTDIR=${pkgdir} prefix=/usr
 	install -Dm755 "$srcdir/$pkgname/bin/cangaroo" -t "$pkgdir/usr/bin"
 	install -Dm755 "$srcdir/$pkgname/src/scripts/setup_vcan.sh" "$pkgdir/usr/bin/cangaroo-setup-vcan"
 	install -Dm755 "$srcdir/$pkgname/canifconfig/canifconfig" -t "$pkgdir/usr/bin"
