--- a/aur-repo/valijson-git/PKGBUILD
+++ b/aur-repo/valijson-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=valijson-git
 pkgdesc='Header-only C++ library for JSON Schema validation (git version)'
-pkgver=1.0.2.r10.gc1dde4e
+pkgver=1.0.3.r43.gdb04461
 pkgrel=1
 arch=(any)
 url="https://github.com/tristanpenman/valijson"
