--- a/aur-repo/davfs2/lilac.yaml
+++ b/aur-repo/davfs2/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 pre_build_script: |
   aur_pre_build(maintainers=['Kewl', 'skyenet'])
-  add_makedepends(['pkgconf'])
+  add_makedepends(['pkgconf', 'neon')
 post_build: aur_post_build
 update_on:
   - source: aur
