--- a/aur-repo/python-115/PKGBUILD
+++ b/aur-repo/python-115/PKGBUILD
@@ -41,7 +41,8 @@ makedepends=(
     python-build
     python-installer
     python-wheel
-    python-setuptools)
+    python-setuptools
+)
 options=('!strip')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
