--- a/aur-repo/python-115/PKGBUILD
+++ b/aur-repo/python-115/PKGBUILD
@@ -10,8 +10,8 @@ arch=('any')
 url="https://pypi.org/project/python-115"
 license=(MIT)
 groups=()
-provides=(${_name})
-conflicts=(${_name})
+provides=(${_name} ${pkgname})
+conflicts=(${_name} ${pkgname})
 depends=(
     python
     python-httpx
