--- a/aur-repo/libdft-git/PKGBUILD
+++ b/aur-repo/libdft-git/PKGBUILD
@@ -11,12 +11,14 @@ provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 replaces=()
 depends=(
-    glibc
-    gcc-libs
+    #     glibc
+    #     gcc-libs
     libdwarf
-    pin)
+)
 makedepends=(
-    git)
+    git
+    pin
+)
 backup=()
 options=('!strip')
 install=
@@ -40,16 +42,18 @@ build() {
     export PIN_ROOT=/opt/pin
 
     cd "${srcdir}/${pkgname}/"
-    #     sed -i 's|track|track nullpin libdft libdft-dta|g' tools/makefile.rules
+    sed -i 's|track|track nullpin libdft libdft-dta|g' tools/makefile.rules
     make
 }
 
 package() {
     cd "${srcdir}/${pkgname}"
+
     install -Dm644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}/"
     cd "${srcdir}/${pkgname}/tools/obj-intel64"
     install -Dm755 track.so -t "${pkgdir}/usr/lib/"
     install -Dm755 nullpin.so -t "${pkgdir}/usr/lib/"
     install -Dm755 libdft.so -t "${pkgdir}/usr/lib/"
     install -Dm755 libdft-dta.so -t "${pkgdir}/usr/lib/"
+
 }
