--- a/aur-repo/python-apscheduler/lilac.yaml
+++ b/aur-repo/python-apscheduler/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['AlphaJack', 'jelly'])
+pre_build_script: aur_pre_build(maintainers=['AlphaJack'])
 post_build: aur_post_build
 update_on:
   - source: aur
