--- a/aur-repo/autocorrect-rs-git/PKGBUILD
+++ b/aur-repo/autocorrect-rs-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=autocorrect-rs-git
 pkgname=autocorrect-git
-pkgver=2.13.0.r3.g51927ca
+pkgver=2.13.0.r4.g351404a
 pkgrel=1
 pkgdesc="A linter and formatter to help you to improve copywriting, correct spaces, words, and punctuations between CJK (Chinese, Japanese, Korean)."
 arch=('x86_64')
