--- a/aur-repo/fantascene-dynamic-wallpaper/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper/PKGBUILD
@@ -9,10 +9,14 @@ url="https://github.com/dependon/fantascene-dynamic-wallpaper"
 license=('GPL-3.0-only')
 provides=(${pkgname})
 conflicts=(${pkgname} ${pkgname}-git)
-depends=(mpv
+depends=(
+    mpv
+    qt5-base
+    qt5-multimedia
     qt5-x11extras
     qt5-webengine)
-makedepends=(pkgconfig
+makedepends=(
+    pkgconfig
     qt5-tools
     make)
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz")
