--- a/aur-repo/dpdk-lts/PKGBUILD
+++ b/aur-repo/dpdk-lts/PKGBUILD
@@ -1,25 +1,55 @@
 pkgname=dpdk-lts
-pkgver=19.11.6
-pkgrel=1
+pkgver=24.11.1
+pkgrel=0
 pkgdesc='A set of libraries and drivers for fast packet processing'
-arch=(x86_64 i686)
+arch=($CARCH)
 url='http://dpdk.org'
-license=(BSD)
-options=(staticlibs)
-depends=(numactl)
-makedepends=(linux-headers libpcap)
+license=(
+  BSD-3-Clause
+  GPL-2.0-only
+)
+provides=(${pkgname%-lts})
+conflicts=(${pkgname%-lts})
+options=()
+depends=(
+  sh
+  gcc-libs
+  libarchive
+  libbsd
+  libelf
+  libpcap
+  libxdp
+  numactl
+  rdma-core
+  openssl
+  python-pyelftools
+  zlib
+)
+makedepends=(
+  doxygen
+  cmake
+  ninja
+  meson
+  scapy
+  dtc
+  libbpf
+  man-db
+  python-sphinx
+  #AUR
+  dlpack
+  isa-l
+)
 checkdepends=()
 source=(
   "http://fast.dpdk.org/rel/dpdk-$pkgver.tar.xz"
 )
-sha256sums=(
-  '97ee27bb98f5e38bdaa3762345817a56f821b016bb2f518cf0aade4fdffde9f4'
-)
+sha256sums=('bcae7d42c449fc456dfb279feabcbe0599a29bebb2fe2905761e187339d96b8e')
 
 prepare() {
-  mv dpdk-stable-$pkgver dpdk-$pkgver
-  cd dpdk-$pkgver
-  make T=x86_64-native-linuxapp-gcc config
+  meson subprojects download --sourcedir="${srcdir}/dpdk-stable-$pkgver"
+  #   mv dpdk-stable-$pkgver dpdk-$pkgver
+  #   cd dpdk-$pkgver
+  #   make T=x86_64-native-linuxapp-gcc config
 
   #   sed -ri 's,(RTE_MACHINE=).*,\1default,'    build/.config
   #   sed -ri 's,(RTE_APP_TEST=).*,\1n,'         build/.config
@@ -33,18 +63,22 @@ prepare() {
 }
 
 build() {
-  cd dpdk-$pkgver
-  make T=x86_64-native-linuxapp-gcc
+  #   cd dpdk-$pkgver
+  #   make T=x86_64-native-linuxapp-gcc
+  cd "${srcdir}/dpdk-stable-$pkgver"
+  arch-meson build
+  ninja -C build
 }
 
-check() {
-  cd dpdk-$pkgver
-  # tests fail
-  make test T=x86_64-native-linuxapp-gcc
-}
+# check() {
+#   cd dpdk-$pkgver
+#   # tests fail
+#   make test T=x86_64-native-linuxapp-gcc
+# }
 
 package() {
-  cd dpdk-$pkgver
-  make DESTDIR="$pkgdir" prefix=/usr sbindir=bin install T=x86_64-native-linuxapp-gcc
-  cp -a "$pkgdir"/lib/ "$pkgdir"/usr/ && rm -rf "$pkgdir"/lib/
+  DESTDIR="${pkgdir}" ninja -C ${srcdir}/dpdk-stable-$pkgver/build install
+  #   cd dpdk-$pkgver
+  #   make DESTDIR="$pkgdir" prefix=/usr sbindir=bin install T=x86_64-native-linuxapp-gcc
+  #   cp -a "$pkgdir"/lib/ "$pkgdir"/usr/ && rm -rf "$pkgdir"/lib/
 }
