--- a/aur-repo/treelite/lilac.yaml
+++ b/aur-repo/treelite/lilac.yaml
@@ -8,7 +8,7 @@ post_build_script: |
 update_on:
   - source: github
     github: dmlc/treelite
-    # use_max_tag: true
+    use_max_tag: true
     # prefix: v
   - alias: python
 
