--- a/aur-repo/rtools-git/PKGBUILD
+++ b/aur-repo/rtools-git/PKGBUILD
@@ -8,10 +8,10 @@ pkgdesc="RTools(米饭工具集)是开发工具集桌面悬浮窗软件，每一
 arch=($CARCH)
 url="https://gitee.com/RiceChen0/rtools"
 license=('Apache-2.0')
-provides=(${_pkgname})
+provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
-depends=('qt5-charts' 'qt5-serialport' 'qt5-networkauth' 'qt5-mqtt')
+depends=('qt5-charts' 'qt5-serialport' 'qt5-networkauth' 'qt5-base' 'qt5-mqtt')
 makedepends=('qt5-tools' 'git')
 optdepends=('jlink-software-and-documentation: Segger JLink software & documentation pack for Linux')
 backup=()
