--- a/aur-repo/ts.net-git/lilac.yaml
+++ b/aur-repo/ts.net-git/lilac.yaml
@@ -5,7 +5,7 @@ post_build_script: |
   git_pkgbuild_commit()
 repo_depends:
   - dotnet-host-bin
-  - dotnet-sdk-bin
+  - dotnet-core-bin
 update_on:
   - source: github
     github: EEVengers/TS.NET
