--- a/aur-repo/detect-it-easy-git/lilac.yaml
+++ b/aur-repo/detect-it-easy-git/lilac.yaml
@@ -3,7 +3,7 @@ maintainers:
 pre_build_script: aur_pre_build(maintainers=['class101', 'horsicq'])
 post_build: aur_post_build
 update_on:
-  - source: github
-    github: horsicq/Detect-It-Easy
-# - source: aur
-#   aur: detect-it-easy-git
+  - source: aur
+    aur: detect-it-easy-git
+# - source: github
+#   github: horsicq/Detect-It-Easy
