--- a/aur-repo/archlinux-java-run/lilac.yaml
+++ b/aur-repo/archlinux-java-run/lilac.yaml
@@ -1,15 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='Bevan')
-
 post_build: aur_post_build
-
 update_on:
-  - source: github
-    github: michaellass/archlinux-java-run
-    use_max_tag: true
-    prefix: v
-
   - source: aur
-    github: archlinux-java-run
+    aur: archlinux-java-run
