--- a/aur-repo/jidugs-appimage/lilac.yaml
+++ b/aur-repo/jidugs-appimage/lilac.yaml
@@ -10,13 +10,26 @@
 #   - source: regex
 #     url: "https://jidugs.wlhex.com/#page2"
 #     regex: '极度公式-(\d+.\d+.\d+).AppImage'
-#   - source: manual
-#     manual: 1
 
+#
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: jidugs-appimage
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
+
 update_on:
-  - source: aur
-    aur: jidugs-appimage
+  - source: regex
+    url: https://jidugs.wlhex.com/#page2
+    regex: 'Linux版本下载-1.4.4([\d.]+)'
+# - source: manual
+#   manual: 1
