--- a/aur-repo/gowin-eda-edu/lilac.yaml
+++ b/aur-repo/gowin-eda-edu/lilac.yaml
@@ -4,4 +4,4 @@ pre_build_script: aur_pre_build(maintainers='yjun')
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: gowin-eda-edu
+    aur: gowin-eda-edu-ide
