--- a/aur-repo/lzma-sdk/PKGBUILD
+++ b/aur-repo/lzma-sdk/PKGBUILD
@@ -20,12 +20,12 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("https://www.7-zip.org/a/lzma${pkgver/./}.7z")
+source=("https://www.7-zip.org/a/lzma${pkgver}.7z")
 noextract=("lzma2102.7z")
 sha256sums=('833888f03c6628c8a062ce5844bb8012056e7ab7ba294c7ea232e20ddadf0d75')
 #validpgpkeys=()
 
 package() {
     install -dm0755 "${pkgdir}/usr/share/${pkgname}"
-    7z x "${srcdir}/lzma${pkgver/./}.7z" -o"${pkgdir}/usr/share/${pkgname}"
+    7z x "${srcdir}/lzma${pkgver}.7z" -o"${pkgdir}/usr/share/${pkgname}"
 }
