--- a/aur-repo/dotnet-core-bin/lilac.yaml
+++ b/aur-repo/dotnet-core-bin/lilac.yaml
@@ -1,7 +1,7 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['Gr3q', 'natep'])
+pre_build_script: aur_pre_build(maintainers=['Gr3q'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: dotnet-core-bin
+    aur: dotnet-sdk-bin
