--- a/aur-repo/python-svgpathtools/lilac.yaml
+++ b/aur-repo/python-svgpathtools/lilac.yaml
@@ -4,5 +4,5 @@ pre_build_script: aur_pre_build(maintainers=['pintert3'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: svgpathtools
+    aur: python-svgpathtools
   - alias: python
