--- a/aur-repo/ts.net-git/lilac.yaml
+++ b/aur-repo/ts.net-git/lilac.yaml
@@ -4,7 +4,7 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
 repo_depends:
-  - dotnet-host-bin
+  - dotnet-runtime-bin
   - dotnet-sdk-bin
 update_on:
   - source: github
