--- a/aur-repo/ch34xsercfg-git/lilac.yaml
+++ b/aur-repo/ch34xsercfg-git/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: taotieren
 pre_build: vcs_update
 repo_depends:
-  - libch9344ser-git
-  - libch343ser-git
+  - libch9344ser
+  - libch343ser
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
