--- a/aur-repo/at32-bootloader-doc/lilac.yaml
+++ b/aur-repo/at32-bootloader-doc/lilac.yaml
@@ -4,4 +4,4 @@ pre_build_script: aur_pre_build(maintainers=['taotieren'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: at32-bootloader-doc
+    aur: at32-bootloader-doc-zh
