--- a/aur-repo/linkchecker/lilac.yaml
+++ b/aur-repo/linkchecker/lilac.yaml
@@ -2,8 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['Rubo'])
 post_build: aur_post_build
-repo_depends:
-  - python-polib
+# repo_depends:
+#   -
 update_on:
   - source: aur
     aur: linkchecker
