--- a/aur-repo/webkit2gtk-hvml/lilac.yaml
+++ b/aur-repo/webkit2gtk-hvml/lilac.yaml
@@ -4,5 +4,5 @@ pre_build_script: aur_pre_build(maintainers=['taotieren'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: webkit2gtk-hvml
+    aur: webkit2gtk-3.0-hvml
     lilac_throttle: 180d
