--- a/aur-repo/hqdfm-wine/lilac.yaml
+++ b/aur-repo/hqdfm-wine/lilac.yaml
@@ -19,4 +19,4 @@ post_build_script: |
 update_on:
   - source: regex
     url: https://dfm.elecfans.com/downloads
-    regex: 'HQDFM v([\d.]+).zip'
+    regex: 'HQDFM%20V([\d.]+).zip'
