--- a/aur-repo/at32-work-bench-bin/lilac.yaml
+++ b/aur-repo/at32-work-bench-bin/lilac.yaml
@@ -1,7 +1,24 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: at32-work-bench-bin
+
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 update_on:
-  - source: aur
-    aur: at32-work-bench-bin
+  - source: htmlparser
+    url: https://www.arterytek.com/cn/support/index.jsp?index=5
+    xpath: "/html/body/div[1]/section/div/div/div[2]/div/div[6]/div/div[3]/div[2]/div/div/div/table/tbody/tr[2]/td[5]"
+    prefix: V
+# update_on:
+#   - source: regex
+#     url: https://www.7-zip.org/sdk.html
+#     regex: 'lzma([\d.]+).7z'
