--- a/aur-repo/at32-work-bench-bin/lilac.yaml
+++ b/aur-repo/at32-work-bench-bin/lilac.yaml
@@ -14,11 +14,6 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
-  - source: htmlparser
-    url: https://www.arterytek.com/cn/support/index.jsp?index=5
-    xpath: "/html/body/div[1]/section/div/div/div[2]/div/div[6]/div/div[3]/div[2]/div/div/div/table/tbody/tr[2]/td[5]"
-    prefix: V
-# update_on:
-#   - source: regex
-#     url: https://www.7-zip.org/sdk.html
-#     regex: 'lzma([\d.]+).7z'
+  - source: regex
+    url: https://www.arterytek.com/json/Document.json
+    regex: 'AT32_Work_Bench_Linux-x86_64_V([\d.]+).zip'
