--- a/aur-repo/artery-isp-console-bin/lilac.yaml
+++ b/aur-repo/artery-isp-console-bin/lilac.yaml
@@ -1,12 +1,24 @@
+# maintainers:
+#   - github: taotieren
+#
+# pre_build_script: aur_pre_build(maintainers='taotieren')
+#
+# post_build: aur_post_build
+#
+# update_on:
+#   - source: aur
+#     aur: artery-isp-console-bin
+#   - source: manual
+#     manual: 1
+
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='taotieren')
-
-post_build: aur_post_build
-
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 update_on:
-  - source: aur
-    aur: artery-isp-console-bin
-  - source: manual
-    manual: 1
+  - source: regex
+    url: https://www.arterytek.com/json/Document.json
+    regex: 'Artery_ISP_Console_Linux-x86_64_V([\d.]+).zip'
