--- a/aur-repo/at32-ide-bin/lilac.yaml
+++ b/aur-repo/at32-ide-bin/lilac.yaml
@@ -1,7 +1,19 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: at32-ide-bin
+
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 update_on:
-  - source: aur
-    aur: at32-ide-bin
+  - source: regex
+    url: https://www.arterytek.com/json/Document.json
+    regex: 'AT32_IDE_V([\d.]+)_Linux-x86_64.zip'
