--- a/aur-repo/python-apscheduler/lilac.yaml
+++ b/aur-repo/python-apscheduler/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['AlphaJack'])
+pre_build_script: |
+  aur_pre_build(maintainers=['AlphaJack'])
+  add_makedepends(['python-setuptools-scm'])
 post_build: aur_post_build
 update_on:
   - source: aur
