--- a/aur-repo/python-future/lilac.yaml
+++ b/aur-repo/python-future/lilac.yaml
@@ -1,6 +1,15 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['micwoj92'])
+pre_build_script: |
+  aur_pre_build(maintainers=['micwoj92'])
+  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-future'])
+
+  for line in edit_file('PKGBUILD'):
+    if line.startswith('check() {'):
+      line = "_check() {"
+    print(line)
+
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 # repo_depends:
 #   -
