--- a/aur-repo/mqtt-monitor-git/PKGBUILD
+++ b/aur-repo/mqtt-monitor-git/PKGBUILD
@@ -11,7 +11,7 @@ provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 #replaces=(${pkgname})
 depends=('npm' 'poppler' 'ghostscript')
-makedepends=()
+makedepends=(git)
 backup=()
 options=('!strip')
 #install=${pkgname}.install
