--- a/aur-repo/teachingapp-mcu-exunit-mono/PKGBUILD
+++ b/aur-repo/teachingapp-mcu-exunit-mono/PKGBUILD
@@ -12,7 +12,7 @@ conflicts=()
 depends=('mono')
 makedepends=('git')
 
-source=("${pkgbase%-mono}::git+https://download.fastgit.org/kmakise/TeachingApp_MCU_Exunit.git")
+source=("${pkgbase%-mono}::git+${url}.git")
 
 sha256sums=('SKIP')
 
