--- a/aur-repo/teachingapp-mcu-exunit-mono/PKGBUILD
+++ b/aur-repo/teachingapp-mcu-exunit-mono/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=teachingapp-mcu-exunit-mono
 pkgname=($pkgbase teachingapp-mcu-exunit-led-display-mono teachingapp-mcu-exunit-keyboard-mono)
-pkgver=1.0.2
+pkgver=20200403.051824
 pkgrel=1
 arch=($CARCH)
 url='https://github.com/kmakise/TeachingApp_MCU_Exunit'
