--- a/aur-repo/mounriver-studio-community-bin/lilac.yaml
+++ b/aur-repo/mounriver-studio-community-bin/lilac.yaml
@@ -1,7 +1,19 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers='taotieren')
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: mounriver-studio-community-bin
+
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='taotieren')
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 update_on:
-  - source: aur
-    aur: mounriver-studio-community-bin
+  - source: regex
+    url: http://api.mounriver.com/mountriver/api/version/fetchRecentCommunity?osType=LINUX&lang=zh
+    regex: 'MounRiver_Studio_Community_Linux_x64_V([\d.]+).tar.xz'
