--- a/aur-repo/mediawarp-git/PKGBUILD
+++ b/aur-repo/mediawarp-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=mediawarp-git
 _name=MediaWarp
-pkgver=0.0.6.r37.gcd73430
+pkgver=0.0.6.r39.geadb8d3
 pkgrel=1
 pkgdesc="EmbyServer API Optimization: Optimize playback of Strm files, customize the front-end style, customize the allowed access to the client, embedded scripts, work with Alist to realize Emby playback of web resources, recommended to use with AutoFilm."
 arch=($CARCH)
