--- a/aur-repo/phosphor-dbus-interfaces-git/lilac.yaml
+++ b/aur-repo/phosphor-dbus-interfaces-git/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 pre_build_script: |
   aur_pre_build(maintainers=['amateurece'])
-  add_makedepends(['cmake', 'nlohmann-json', 'pkgconf', 'boost-libs'])
+  add_makedepends(['cmake', 'nlohmann-json', 'pkgconf', 'boost-libs', 'python-jsonschema'])
 post_build: aur_post_build
 repo_depends:
   - sdbusplus-git
