--- a/aur-repo/python-kicadmodtree/PKGBUILD
+++ b/aur-repo/python-kicadmodtree/PKGBUILD
@@ -18,13 +18,15 @@ depends=(
     python
     "${_pydeps[@]/#/python-}")
 _pymakedeps=(
-    asteval
     future
     pycodestyle
     build
     installer
     wheel
-    setuptools)
+    setuptools
+    # AUR
+    asteval-git
+)
 makedepends=(git
     "${_pymakedeps[@]/#/python-}")
 checkdepends=(python-pytest)
@@ -35,14 +37,14 @@ sha256sums=('SKIP')
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
-    ( set -o pipefail
+    (
+        set -o pipefail
         git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
-        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
