--- a/aur-repo/python-kicadmodtree/lilac.yaml
+++ b/aur-repo/python-kicadmodtree/lilac.yaml
@@ -7,6 +7,7 @@ post_build_script: |
   update_aur_repo()
 repo_depends:
   - python-future
+  - python-asteval-git
 update_on:
   - source: gitlab
     gitlab: kicad/libraries/kicad-footprint-generator
