--- a/aur-repo/python-asteval-git/PKGBUILD
+++ b/aur-repo/python-asteval-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=python-asteval-git
 _name=asteval
-pkgver=1.0.4.r4.g36dc5f1
+pkgver=1.0.5.r0.g8d7326d
 pkgrel=1
 pkgdesc="Minimalistic evaluator of python expression using ast module"
 url="https://github.com/lmfit/asteval"
