--- a/aur-repo/linuxdeploy-appimage/lilac.yaml
+++ b/aur-repo/linuxdeploy-appimage/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['Reylyer'])
+pre_build_script: |
+  aur_pre_build(maintainers=['Reylyer'])
+  add_makedepends(['sed'])
 post_build: aur_post_build
 # repo_depends:
 #   -
