--- a/aur-repo/sigrok-slogic-git/lilac.yaml
+++ b/aur-repo/sigrok-slogic-git/lilac.yaml
@@ -4,6 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - linuxdeploy-appimage
 update_on:
   - source: github
     github: sipeed/sigrok_slogic
