--- a/aur-repo/sigrok-slogic-git/lilac.yaml
+++ b/aur-repo/sigrok-slogic-git/lilac.yaml
@@ -5,7 +5,7 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 repo_depends:
-  - linuxdeploy-appimage
+  - libserialport-git
 update_on:
   - source: github
     github: sipeed/sigrok_slogic
