--- a/aur-repo/sigrok-slogic-git/PKGBUILD
+++ b/aur-repo/sigrok-slogic-git/PKGBUILD
@@ -40,7 +40,8 @@ makedepends=(
 )
 conflicts=("${pkgname%-git}" libsigrok libsigrok-git)
 provides=("${pkgname%-git}" libsigrok libsigrok-git)
-source=("${pkgbase}::git+https://github.com/sipeed/sigrok_slogic.git")
+# source=("${pkgbase}::git+https://github.com/sipeed/sigrok_slogic.git")
+source=("${pkgbase}::git+https://github.com/sigrokproject/libsigrok.git")
 md5sums=('SKIP')
 
 pkgver() {
@@ -57,9 +58,9 @@ prepare() {
   cd "${srcdir}/${pkgbase}"
   git config --global user.email "admin@taotieren.com"
   git config --global user.name "taotieren"
-  git remote add libsigrok https://github.com/sigrokproject/libsigrok.git
+  git remote add sigrok_slogic https://github.com/sipeed/sigrok_slogic.git
   git fetch --all
-  git merge libsigrok/master
+  git merge sigrok_slogic/hardware-sipeed-slogic-analyzer-support
   #   hardware-sipeed-slogic-analyzer-support
 }
 
