--- a/aur-repo/sigrok-slogic-git/PKGBUILD
+++ b/aur-repo/sigrok-slogic-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=sigrok-slogic-git
 pkgname=(sigrok-slogic-git)
-pkgver=0.2.1
+pkgver=0.2.1.r4402.gac52ec30
 pkgrel=1
 pkgdesc="sigrok_slogic"
 arch=($CARCH)
