--- a/aur-repo/pulseview-git/lilac.yaml
+++ b/aur-repo/pulseview-git/lilac.yaml
@@ -4,6 +4,7 @@ pre_build_script: aur_pre_build(maintainers=['codyps', 'megamoth', 'anatolik', '
 post_build: aur_post_build
 repo_depends:
   - libsigrok-git
+  - libsigrokdecode-git
 update_on:
   - source: aur
     aur: pulseview-git
