--- a/aur-repo/pulseview-git/PKGBUILD
+++ b/aur-repo/pulseview-git/PKGBUILD
@@ -6,7 +6,7 @@
 
 _gitname='pulseview'
 pkgname="${_gitname}-git"
-pkgver=0.3.0
+pkgver=0.3.0.r1170.g32ca7966
 pkgrel=1
 pkgdesc="A Qt based logic analyzer GUI for sigrok. (git version)"
 arch=('armv6h' 'armv7h' 'i686' 'x86_64')
@@ -26,10 +26,10 @@ pkgver() {
 
 build() {
   cmake -B build -S "${srcdir}/${_gitname}" \
-    -DCMAKE_INSTALL_PREFIX:PATH='/usr' \
-    -DCMAKE_CXX_FLAGS=-fext-numeric-literals \
-    -DDISABLE_WERROR=TRUE \
-    -Wno-dev
+        -DCMAKE_INSTALL_PREFIX:PATH='/usr' \
+        -DCMAKE_CXX_FLAGS=-fext-numeric-literals \
+        -DDISABLE_WERROR=TRUE \
+        -Wno-dev
   cmake --build build
 }
 
