--- a/aur-repo/xrock-git/PKGBUILD
+++ b/aur-repo/xrock-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock-git
-pkgver=1.1.2.r5.g95089f5
-pkgrel=3
+pkgver=1.1.2.r6.gee72e88
+pkgrel=1
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
 arch=($CARCH)
