--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28101.77.r5.g924aef7
+pkgver=28101.77.r6.g3545ff1
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=($CARCH)
