--- a/aur-repo/h7toolpc-wine/lilac.yaml
+++ b/aur-repo/h7toolpc-wine/lilac.yaml
@@ -1,8 +1,23 @@
+# maintainers:
+#   - github: taotieren
+# build_prefix: multilib
+# pre_build_script: aur_pre_build(maintainers='taotieren')
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: h7toolpc-wine
+
 maintainers:
   - github: taotieren
-build_prefix: multilib
-pre_build_script: aur_pre_build(maintainers='taotieren')
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
+
 update_on:
-  - source: aur
-    aur: h7toolpc-wine
+  - source: regex
+    url: https://www.armbbs.cn/forum.php?mod=viewthread&tid=95468
+    regex: 'h7toolPC_release(V([\d.]+)).7z'
+# - source: manual
+#   manual: 1
