--- a/aur-repo/python-pyrsistent/PKGBUILD
+++ b/aur-repo/python-pyrsistent/PKGBUILD
@@ -4,12 +4,12 @@
 pkgname=python-pyrsistent
 _name=${pkgname#python-}
 pkgver=0.20.0
-pkgrel=7
+pkgrel=8
 pkgdesc="Persistent/Functional/Immutable data structures"
-arch=($CARCH)
+arch=(any)
 license=('MIT')
 url="https://github.com/tobgu/pyrsistent"
-depends=('glibc' 'python')
+depends=('python')
 makedepends=(
   'python-build'
   'python-installer'
