--- a/aur-repo/h7toolpc-wine/PKGBUILD
+++ b/aur-repo/h7toolpc-wine/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=h7toolpc-wine
-pkgver=2.2.6
-pkgrel=5
+pkgver=2.2.7
+pkgrel=1
 pkgdesc="Wine H7-TOOL 的 PC 上位机，支持串口、CAN、示波器、CMSIS-DAP、DS18B20、RTT Viewer、脱机烧录等"
 arch=('x86_64')
 url="http://www.armbbs.cn/forum.php?mod=viewthread&tid=95468"
@@ -20,12 +20,13 @@ makedepends=(libarchive)
 backup=()
 options=('!strip' '!debug')
 install=${pkgname}.install
-source=("${pkgname/pc-wine/PC_release}-${pkgver}.7z::https://img.anfulai.cn/bbs/95468/${pkgname/pc-wine/PC_release}(V${pkgver}).7z"
+# https://www.armfly.com/download/H7-TOOL/h7toolPC_release(V2.2.7).7z
+source=("${pkgname/pc-wine/PC_release}-${pkgver}.7z::https://www.armfly.com/download/H7-TOOL/${pkgname/pc-wine/PC_release}(V${pkgver}).7z"
     "icons.tar.gz"
     "${pkgname}.install")
-sha256sums=('5d59bfcdba39f4abe9bd3abac269291419dde6cb571f804f7341541f97b9c658'
-    '6823224b5699dc17c41efdcbc8465554f007cb62cadea0aad9b67c08c5698142'
-    'b7ed44498e84bae5f174fd0a4a56aea0298ce93bc9a5de8b1dfb41c067705d27')
+sha256sums=('ab2450e05146daa762bc46263e7af2aa2d5ef1641df879dec0461bafbafc165c'
+            '6823224b5699dc17c41efdcbc8465554f007cb62cadea0aad9b67c08c5698142'
+            'b7ed44498e84bae5f174fd0a4a56aea0298ce93bc9a5de8b1dfb41c067705d27')
 noextract=("icons.tar.gz")
 
 package() {
