--- a/aur-repo/res-downloader/PKGBUILD
+++ b/aur-repo/res-downloader/PKGBUILD
@@ -11,6 +11,7 @@ provides=(${pkgname})
 conflicts=(${pkgname})
 # replaces=(${pkgname})
 depends=(
+    ca-certificates-utils
     gdk-pixbuf2
     glib2
     glibc
