update  quartus-free

--- a/aur-repo/quartus-free/lilac.yaml
+++ b/aur-repo/quartus-free/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers='gbs')
 post_build: aur_post_build
+repo_depends:
+  - ncurses5-compat-libs
 update_on:
   - source: aur
     aur: quartus-free
