--- a/aur-repo/mounriverstudio-bin/lilac.yaml
+++ b/aur-repo/mounriverstudio-bin/lilac.yaml
@@ -5,8 +5,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-repo_depends:
-  - ncurses5-compat-libs
+# repo_depends:
+#   - ncurses5-compat-libs
 update_on:
   - source: regex
     url: http://api.mounriver.com/mountriver/api/version/fetchRecent2?swType=2&osType=LINUX&lang=zh
