--- a/aur-repo/neobox-git/PKGBUILD
+++ b/aur-repo/neobox-git/PKGBUILD
@@ -5,13 +5,14 @@ pkgname=neobox-git
 pkgver=2.4.5.r8.ga81bd4e
 pkgrel=1
 pkgdesc="采用 C++ 20 编写的一个插件管理工具，可以安装网速悬浮窗等插件。"
-arch=('x86_64')
+arch=($CARCH)
 url="https://github.com/yjmthu/Neobox"
 license=('MIT')
 provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 depends=(
   curl
+  libnotify
   qt6-base)
 makedepends=(
   cmake
@@ -25,6 +26,8 @@ source=(
   "WinToast::git+https://github.com/mohabouje/WinToast.git"
   "YJson::git+https://github.com/yjmthu/YJson.git"
   "zip::git+https://github.com/kuba--/zip.git"
+  "neobox-plugins:git+https://github.com/yjmthu/neobox-plugins.git"
+
 )
 sha256sums=('SKIP'
   'SKIP'
@@ -54,7 +57,8 @@ build() {
     -D CMAKE_INSTALL_LIBDIR=lib \
     -D CMAKE_INSTALL_LIBEXECDIR=lib \
     -B build \
-    -G Ninja
+    -G Ninja \
+    -Wno-dev
 
   ninja -C build
 }
