bookget-git: auto updated to 24.1118.8.ga6c7df5-1

--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=bookget-git
-pkgver=24.1118.7.g562cb2c
+pkgver=24.1118.8.ga6c7df5
 pkgrel=1
 pkgdesc="bookget 数字图书馆下载工具，目前支持约50+个数字图书馆。"
 arch=($CARCH)
